--- a/release/src-rt-6.x.4708/linux/linux-2.6.36/Makefile
+++ b/release/src-rt-6.x.4708/linux/linux-2.6.36/Makefile
@@ -600,6 +600,10 @@ ifeq ($(CONFIG_DUAL_TRX),y)
 KBUILD_CFLAGS += -DCONFIG_DUAL_TRX
 endif
 
+ifeq ($(BUILD_NAME),R6300V2)
+KBUILD_CFLAGS += -DCONFIG_BOARD_DATA
+endif
+
 ifeq ($(BUILD_NAME),R7000)
 KBUILD_CFLAGS += -DCONFIG_BOARD_DATA
 endif
