--- a/release/src/router/www/Makefile
+++ b/release/src/router/www/Makefile
@@ -7,11 +7,11 @@ MODELS_HAVE_USB3 = DSL-AC68U \
 	RT-AC5300 RT-AC5300R RT-AC3100 RT-AC3200 \
 	RT-AC88Q BRT-AC828 RT-AC55U RT-AC55UHP \
 	RT-AC88U RT-AC87U RT-AC68U RT-AC68A RT-AC56S RT-AC56U \
-	EA6900 R7000 WS880 \
+	EA6900 R6300V2 R7000 WS880 \
 	RT-N65U \
 	RT-N18U
 
-MODELS_HAVE_TRAFFIC_ANALYZER = RT-AC3200 RT-AC87U RT-AC88U RT-AC86U AC2900 RT-AC3100 RT-AC5300 GT-AC5300 DSL-AC68U RT-AC68U RT-AC68A EA6900 R7000 WS880 \
+MODELS_HAVE_TRAFFIC_ANALYZER = RT-AC3200 RT-AC87U RT-AC88U RT-AC86U AC2900 RT-AC3100 RT-AC5300 GT-AC5300 DSL-AC68U RT-AC68U RT-AC68A EA6900 R6300V2 R7000 WS880 \
 	4G-AC68U RT-AC68R RT-AC68W RT-AC68RW RT-AC1900P RT-AC67U RT-AC56U RT-AC56R RT-AC85U
 
 all:
