--- a/release/src-rt-6.x.4708/cfe/Makefile
+++ b/release/src-rt-6.x.4708/cfe/Makefile
@@ -1,11 +1,15 @@
 export PATH := $(PATH):$(shell pwd)/../toolchains/hndtools-arm-linux-2.6.36-uclibc-4.5.3/bin
 export LD_LIBRARY_PATH := $(shell pwd)/../toolchains/hndtools-arm-linux-2.6.36-uclibc-4.5.3/lib
 
-all: ea6900 r7000 ws880
+all: ea6900 r6300v2 r7000 ws880
 
 ea6900 EA6900:
 	make -C build/broadcom/bcm947xx clean
 	make -C build/broadcom/bcm947xx EA6900=1
+
+r6300v2 R6300V2:
+	make -C build/broadcom/bcm947xx clean
+	make -C build/broadcom/bcm947xx R6300V2=1
 
 r7000 R7000:
 	make -C build/broadcom/bcm947xx clean
